--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "~=3.1.0"
 gunicorn = "===19.9.0"
 environs = {version = "==8.0.0", extras = ["django"]}
+pre-commit = "*"
 
 [dev-packages]
 
