--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ environs = {version = "==8.0.0", extras = ["django"]}
 pre-commit = "*"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3.10"
