--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,10 @@ name = "pypi"
 django = "~=3.1.0"
 gunicorn = "===19.9.0"
 environs = {version = "==8.0.0", extras = ["django"]}
-pre-commit = "*"
 
 [dev-packages]
-black = "*"
+pre-commit = "~=2.18.1"
+black = "~=22.3.0"
 
 [requires]
 python_version = "3.10"
