--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ environs = {version = "==8.0.0", extras = ["django"]}
 [dev-packages]
 pre-commit = "~=2.18.1"
 black = "~=22.3.0"
+flake8 = "~=4.0.1"
 
 [requires]
 python_version = "3.10"
