--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ environs = {version = "==8.0.0", extras = ["django"]}
 pre-commit = "~=2.18.1"
 black = "~=22.3.0"
 flake8 = "~=4.0.1"
+isort = "~=5.10.1"
 
 [requires]
 python_version = "3.10"
