--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.2.0
     hooks:
     # add supported hooks https://pre-commit.com/hooks.html
       - id: check-added-large-files
@@ -15,6 +15,7 @@ repos:
     rev: 22.3.0
     hooks:
     - id: black
+      exclude: ^.*\b(migrations)\b.*$
       # See bug: https://github.com/psf/black/issues/2964
       # If possible, run rev: 22.3.0 to obviate the need for pinning click
       # additional_dependencies: ["click==8.0.4"]
