--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "~=3.1.0"
+django = ">=3.1.0"
 gunicorn = "===19.9.0"
 environs = {version = "==8.0.0", extras = ["django"]}
 
 [dev-packages]
-pre-commit = "~=2.18.1"
-black = "~=22.3.0"
-flake8 = "~=4.0.1"
-isort = "~=5.10.1"
+pre-commit = ">=^2.18.1"
+black = ">=^22.3.0"
+flake8 = ">=^4.0.1"
+isort = ">=^5.10.1"
 
 [requires]
 python_version = "3.10"
