--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,25 @@ multi_line_output = 3
 skip = ["*.gitignore"]
 extend_skip = ["*.md", "*.json"]
 line_length = 119
+
+[tool.poetry]
+name = "django_start"
+version = "0.1.0"
+description = "Basic Django project template"
+authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = "^3.10"
+Django = "^4.0.4"
+environs = {extras = ["django"], version = "^9.5.0"}
+
+[tool.poetry.dev-dependencies]
+pre-commit = "^2.19.0"
+black = "^22.3.0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
