--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ exclude =
     build,
     .env,
     pages/migrations/*,
+    staticfiles/*,
     dist,
     images/
 # https://www.flake8rules.com
@@ -52,7 +53,7 @@ ignore =
     E402
     # bare except
     E722
-max-line-length = 119
+max-line-length = 79
 per-file-ignores =
     # __init__ exports names
     # app/crud/__init__.py: F401
