--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pre-commit = "^2.19.0"
 black = "^22.3.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
+django-debug-toolbar = "^3.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
