--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ flake8 = "^4.0.1"
 isort = "^5.10.1"
 django-debug-toolbar = "^3.4.0"
 pytest = "^7.1.2"
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
