--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,13 @@ django-debug-toolbar = "^3.4.0"
 pytest = "^7.1.2"
 pytest-django = "^4.5.2"
 
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "config.settings"
+python_files = ["tests.py", "test_*.py", "*_tests.py"]
+filterwarnings = [
+    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
+]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
