Create CustomUser forms

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ exclude =
     __pycache__,
     build,
     .env,
+    accounts/migrations/*,
     pages/migrations/*,
     staticfiles/*,
     dist,
