--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ python = "^3.10"
 Django = "^4.0.4"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
+django-crispy-forms = "^1.14.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
