--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,16 @@ exclude = '''
 )/
 '''
 
+[tool.coverage.paths]
+source = ["accounts", "config", "pages"]
+
+[tool.coverage.run]
+branch = true
+source = ["config"]
+
+[tool.coverage.report]
+show_missing = true
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3
@@ -44,6 +54,8 @@ isort = "^5.10.1"
 django-debug-toolbar = "^3.4.0"
 pytest = "^7.1.2"
 pytest-django = "^4.5.2"
+coverage = {extras = ["toml"], version = "^6.4.1"}
+pytest-cov = "^3.0.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
