Adjust files to omit

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,12 +3,10 @@ omit =
     */__init__.py,
     *manage.py,
     *settings*.py,
-    *urls.py,
-    *admin.py,
     *migrations/*,
     *tests/*,
     *test_*.py,
-    *tests.py
+    *tests.py,
     *wsgi.py,
     *conftest.py,
     */extra*
