--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ Django = "^4.0.4"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 django-crispy-forms = "^1.14.0"
+django-test-plus = "^2.2.0"
+pytest-sugar = "^0.9.4"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
