--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ omit = [
     "*conftest.py",
     "*/extra*",
 ]
+plugins = [
+    "django_coverage_plugin",
+]
+
+[tool.coverage.django_coverage_plugin]
+template_extensions = "html, txt, tex, email"
 
 [tool.coverage.report]
 show_missing = true
@@ -76,6 +82,7 @@ django-extensions = "^3.1.5"
 ipython = "^8.4.0"
 friendly = "^0.5.26"
 colorama = "^0.4.4"
+django-coverage-plugin = "^2.0.3"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
