--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ psycopg2-binary = "^2.9.3"
 django-crispy-forms = "^1.14.0"
 django-test-plus = "^2.2.0"
 pytest-sugar = "^0.9.4"
+django-allauth = "^0.51.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
