--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ ipython = "^8.4.0"
 friendly = "^0.5.26"
 colorama = "^0.4.4"
 django-coverage-plugin = "^2.0.3"
+factory-boy = "3.0.1"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
