--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ django-crispy-forms = "^1.14.0"
 django-test-plus = "^2.2.0"
 pytest-sugar = "^0.9.4"
 django-allauth = "^0.51.0"
+Pillow = "^9.1.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
