--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ django-test-plus = "^2.2.0"
 pytest-sugar = "^0.9.4"
 django-allauth = "^0.51.0"
 Pillow = "^9.1.1"
+django-countries = "^7.3.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
