--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,8 @@ friendly = "^0.5.26"
 colorama = "^0.4.4"
 django-coverage-plugin = "^2.0.3"
 factory-boy = "3.0.1"
+django-pytest = "^0.2.0"
+django-test-plus = "^2.2.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
