Add penv versions for testing. Resolves #20

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.0.1
 url = https://github.com/kevinbowen777/django_start
 author = Kevin Bowen
 author_email = kevin.bowen@gmail.com
-description = A todo app demonstrating basic Django functionality
+description = A Django app demonstrating basic functionality & testing methods
 long_description = file: README.md
 license = MIT
 classifiers =
@@ -24,12 +24,12 @@ project_urls =
     Source = https://github.com/kevinbowen777/django_start/
 
 [options]
-python_requires = >=3.8
+python_requires = >=3.9
 packages = find:
 include_package_data = true
 zip_safe = false
 install_requires =
-    Django >= 3.1.14
+    Django >= 4.0.1
 
 [flake8]
 # https://flake8.pycqa.org/en/latest/user/configuration.html
