--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ django-coverage-plugin = "^2.0.3"
 factory-boy = "3.0.1"
 django-pytest = "^0.2.0"
 django-test-plus = "^2.2.0"
+nox = "^2022.1.7"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
