--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ Django = "^4.0.4"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 django-crispy-forms = "^1.14.0"
-django-test-plus = "^2.2.0"
+django-extensions = "^3.1.5"
 pytest-sugar = "^0.9.4"
 django-allauth = "^0.51.0"
 Pillow = "^9.1.1"
@@ -90,6 +90,11 @@ factory-boy = "3.0.1"
 django-pytest = "^0.2.0"
 django-test-plus = "^2.2.0"
 nox = "^2022.1.7"
+flake8-bandit = "^3.0.0"
+flake8-black = "^0.3.3"
+flake8-bugbear = "^22.4.25"
+flake8-import-order = "^0.18.1"
+safety = "^1.10.3"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
