--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ flake8-black = "^0.3.3"
 flake8-bugbear = "^22.4.25"
 flake8-import-order = "^0.18.1"
 safety = "^1.10.3"
+flake8-docstrings = "^1.6.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
