--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,10 @@ exclude =
     images/
 # https://www.flake8rules.com
 ignore =
+    # Missing docstring in public class
+    D101
+    # Missing docstring in public method
+    D102
     # falsely triggers on list slicing
     E203
     # import at top, avoid circular imports
