--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ flake8-bugbear = "^22.4.25"
 flake8-import-order = "^0.18.1"
 safety = "^1.10.3"
 flake8-docstrings = "^1.6.0"
+Sphinx = "^5.0.2"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
