Update exclusion files. Fixes #39

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
 [flake8]
 # https://flake8.pycqa.org/en/latest/user/configuration.html
 exclude =
+    conftest.py
     # No need to traverse git directory
     .git,
     # Skip cache directories
