--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ DJANGO_SETTINGS_MODULE = "config.settings"
 python_files = ["tests.py", "test_*.py", "*_tests.py"]
 filterwarnings = [
     "ignore::django.utils.deprecation.RemovedInDjango50Warning",
+    "ignore::django.utils.deprecation.RemovedInDjango41Warning",
 ]
 
 [build-system]
