--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ django-allauth = "^0.51.0"
 Pillow = "^9.1.1"
 django-countries = "^7.3.2"
 whitenoise = "5.3.0"
+gunicorn = "~=20.1.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
