--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
     hooks:
     # add supported hooks https://pre-commit.com/hooks.html
       - id: check-added-large-files
+        # args: ['--maxkb=XXXX']
       - id: check-toml
       - id: check-yaml
       - id: debug-statements
