Add flake8 E501 exception for config/settings.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django_start
-version = 0.0.1
+version = 0.1.0
 url = https://github.com/kevinbowen777/django_start
 author = Kevin Bowen
 author_email = kevin.bowen@gmail.com
@@ -29,7 +29,7 @@ packages = find:
 include_package_data = true
 zip_safe = false
 install_requires =
-    Django >= 4.0.1
+    Django >= 4.0.6
 
 [flake8]
 # https://flake8.pycqa.org/en/latest/user/configuration.html
@@ -41,8 +41,6 @@ exclude =
     __pycache__,
     build,
     .env,
-    accounts/migrations/*,
-    pages/migrations/*,
     staticfiles/*,
     dist,
     images/
@@ -60,6 +58,7 @@ ignore =
     E722
 max-line-length = 79
 per-file-ignores =
+    config/settings.py: E501
     # __init__ exports names
     # app/crud/__init__.py: F401
     # app/schemas/__init__.py: F401
