--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,6 @@ gunicorn = "~=20.1.0"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
 black = "^22.3.0"
-flake8 = "^4.0.1"
 isort = "^5.10.1"
 django-debug-toolbar = "^3.4.0"
 pytest = "^7.1.2"
@@ -91,13 +90,14 @@ factory-boy = "3.0.1"
 django-pytest = "^0.2.0"
 django-test-plus = "^2.2.0"
 nox = "^2022.1.7"
-flake8-bandit = "^3.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^22.4.25"
 flake8-import-order = "^0.18.1"
 safety = "^1.10.3"
 flake8-docstrings = "^1.6.0"
 Sphinx = "^5.0.2"
+flake8 = "4.0.1"
+flake8-bandit = "^3.0.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
