--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,8 +6,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
-    - uses: SECRET_KEY=${{secrets.SECRET_KEY}}
       with:
+        env: SECRET_KEY=${{secrets.SECRET_KEY}}
         python-version: '3.10.6'
         architecture: x64
     - run: pip install nox==2022.8.7
