--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,9 +7,10 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-        env: SECRET_KEY=${{secrets.SECRET_KEY}}
         python-version: '3.10.6'
         architecture: x64
     - run: pip install nox==2022.8.7
     - run: pip install poetry==1.1.14
-    - run: nox
+    - run: |
+        export SECRET_KEY=${{secrets.SECRET_KEY}}
+        nox
