--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,11 +3,14 @@ on: push
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11.0rc1", "3.10.6", "3.9.13"]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-        python-version: '3.10.6'
+        python-version: ${{ matrix.python-version }}
         architecture: x64
     - run: pip install nox==2022.8.7
     - run: pip install poetry==1.1.14
