Run lint-3.9 only

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,4 +18,4 @@ jobs:
         export SECRET_KEY=${{secrets.SECRET_KEY}}
         export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
         export DATABASE_URL=${{secrets.DATABASE_URL}}
-        nox -s lint
+        nox -s lint-3.9
