--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11.0-rc.1", "3.10.6", "3.9.13"]
+        python-version: ["3.9.13", "3.10.6", "3.11.0-rc.1"]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
