--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,18 +1,22 @@
 name: django_start tests
 on: push
 jobs:
-  tests:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "3.9", "3.10", "3.11" ]
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
-        architecture: x64
-    - run: pip install nox==2022.8.7
-    - run: pip install poetry==1.1.14
-    - run: |
-        export SECRET_KEY=${{secrets.SECRET_KEY}}
-        export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
-        export DATABASE_URL=${{secrets.DATABASE_URL}}
-        nox -k "not tests"
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+      - run: pip install nox==2022.8.7
+      - run: pip install poetry==1.1.14
+      - run: |
+          export SECRET_KEY=${{secrets.SECRET_KEY}}
+          export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
+          export DATABASE_URL=${{secrets.DATABASE_URL}}
+          nox -k "not tests"
