--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ jobs:
     strategy:
       matrix:
         python-version: [ "3.9", "3.10", "3.11" ]
+    name: Python ${{ matrix.python-version }} sample
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
