--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.9', '3.10' ]
+        python-version: ['3.9', '3.10']
     name: Python ${{ matrix.python-version }} django_start
     steps:
       - uses: actions/checkout@v3
@@ -14,9 +14,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: pip install nox==2022.8.7
-      - run: pip install poetry==1.1.14
       - run: |
+          pip install nox==2022.8.7
+          pip install poetry==1.1.14
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
           export DATABASE_URL=${{secrets.DATABASE_URL}}
