--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 name: django_start tests
 on: push
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -14,9 +14,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
+      - run: pip install nox==2022.8.7
+      - run: pip install poetry==1.1.14
       - run: |
-          pip install nox==2022.8.7
-          pip install poetry==1.1.14
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
           export DATABASE_URL=${{secrets.DATABASE_URL}}
