--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,10 +13,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: x64
-      - run: pip install nox==2022.8.7
-      - run: pip install poetry==1.1.14
-      - run: |
+        run: pip install nox==2022.8.7
+        run: pip install poetry==1.1.14
+        run: |
         export SECRET_KEY=${{secrets.SECRET_KEY}}
         export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
         export DATABASE_URL=${{secrets.DATABASE_URL}}
