--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,11 @@
-name: django_start tests
+name: django_start-tests
 on: push
 jobs:
   tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.9.13', '3.10.6']
+        python-version: ['3.10.6']
     name: Python ${{ matrix.python-version }} django_start
     steps:
       - uses: actions/checkout@v3
@@ -13,10 +13,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-        run: pip install nox==2022.8.7
-        run: pip install poetry==1.1.14
-        run: |
-          export SECRET_KEY=${{secrets.SECRET_KEY}}
-          export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
-          export DATABASE_URL=${{secrets.DATABASE_URL}}
-          nox -k "not tests"
+          architecture: x64
+      - run: pip install nox==2022.8.7
+      - run: pip install poetry==1.1.14
+      - run: |
+        export SECRET_KEY=${{secrets.SECRET_KEY}}
+        export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
+        export DATABASE_URL=${{secrets.DATABASE_URL}}
+        nox -s lint-3.10
