--- a/.github/workflows/lint_multi-arch.yml
+++ b/.github/workflows/lint_multi-arch.yml
@@ -20,4 +20,4 @@ jobs:
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
           export DATABASE_URL=${{secrets.DATABASE_URL}}
-          nox -s lint
+          nox -s lint-${{ matrix.python-version }}
