--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "4.1"
+Django = "^4.1"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 django-crispy-forms = "^1.14.0"
