--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,31 +75,30 @@ gunicorn = "~=20.1.0"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
 black = "^22.3.0"
+flake8 = "^4.0.1"
 isort = "^5.10.1"
 django-debug-toolbar = "^3.4.0"
 pytest = "^7.1.2"
 pytest-django = "^4.5.2"
 coverage = {extras = ["toml"], version = "^6.4.1"}
 pytest-cov = "^3.0.0"
-django-extensions = "^3.1.5"
+django-test-plus = "^2.2.0"
+pytest-sugar = "^0.9.4"
 ipython = "^8.4.0"
 friendly = "^0.5.26"
 colorama = "^0.4.4"
 django-coverage-plugin = "^2.0.3"
-factory-boy = "3.0.1"
 django-pytest = "^0.2.0"
-django-test-plus = "^2.2.0"
+factory-boy = "3.0.1"
 nox = "^2022.1.7"
-flake8-black = "^0.3.3"
-flake8-bugbear = "^22.4.25"
-flake8-import-order = "^0.18.1"
-flake8-docstrings = "^1.6.0"
-Sphinx = "^5.0.2"
-flake8 = "4.0.1"
 flake8-bandit = "^3.0.0"
+flake8-black = "^0.3.3"
+flake8-bugbear = "^22.6.22"
+flake8-import-order = "^0.18.1"
 safety = "^2.1.0"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
+Sphinx = "^5.1.1"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
