--- a/.github/workflows/nox-safety_multi-arch.yml
+++ b/.github/workflows/nox-safety_multi-arch.yml
@@ -1,4 +1,4 @@
-name: nox-safety_multi-arch
+name: nox-lint_multi-arch
 on: push
 jobs:
   tests:
@@ -20,4 +20,4 @@ jobs:
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
           export DATABASE_URL=${{secrets.DATABASE_URL}}
-          nox -s safety-${{ matrix.python-version }}
+          nox -s lint-${{ matrix.python-version }}
