--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ Pillow = "^9.1.1"
 django-countries = "^7.3.2"
 whitenoise = "5.3.0"
 gunicorn = "~=20.1.0"
+cryptography = "38.0.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
