Update noxfile & correct flake import errors. Resolves #100

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = django_start
+name = django-start
 version = 0.1.0
-url = https://github.com/kevinbowen777/django_start
+url = https://github.com/kevinbowen777/django-start
 author = Kevin Bowen
 author_email = kevin.bowen@gmail.com
 description = A Django app demonstrating basic functionality & testing methods
@@ -19,9 +19,10 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Internet :: WWW/HTTP
 project_urls =
-    Source = https://github.com/kevinbowen777/django_start/
+    Source = https://github.com/kevinbowen777/django-start/
 
 [options]
 python_requires = >=3.9
@@ -29,7 +30,7 @@ packages = find:
 include_package_data = true
 zip_safe = false
 install_requires =
-    Django >= 4.0.6
+    Django >= 4.1
 
 [flake8]
 # https://flake8.pycqa.org/en/latest/user/configuration.html
@@ -60,6 +61,12 @@ ignore =
 max-line-length = 79
 per-file-ignores =
     config/settings.py: E501
+    accounts/tests.py:S101,S106
+    accounts/tests/*:S101,S106
+    config/tests.py:S101,S106
+    config/tests/*:S101,S106
+    pages/tests.py:S101,S106
+    pages/tests/*:S101,S106
     # __init__ exports names
     # app/crud/__init__.py: F401
     # app/schemas/__init__.py: F401
