--- a/.github/workflows/nox-safety_multi-arch.yml
+++ b/.github/workflows/nox-safety_multi-arch.yml
@@ -1,12 +1,12 @@
-name: nox-lint_multi-arch
+name: nox-safety_multi-arch
 on: push
 jobs:
   tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.9', '3.10']
-    name: Python ${{ matrix.python-version }} django_start
+        python-version: ['3.9', '3.10', '3.11']
+    name: Python ${{ matrix.python-version }} django-start
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -15,9 +15,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: x64
       - run: pip install nox==2022.8.7
-      - run: pip install poetry==1.1.15
+      - run: pip install poetry==1.2.2
       - run: |
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
           export DATABASE_URL=${{secrets.DATABASE_URL}}
-          nox -s lint-${{ matrix.python-version }}
+          nox -s safety-${{ matrix.python-version }}
