--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,9 +62,8 @@ pytest-sugar = "^0.9.4"
 django-allauth = "^0.51.0"
 Pillow = "^9.1.1"
 django-countries = "^7.3.2"
-whitenoise = "6.0.0"
+whitenoise = "^6.0.0"
 gunicorn = "~=20.1.0"
-cryptography = "38.0.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
