Ignore prod docker-compose file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# updated 20220904
+# updated 20221117
 # from: https://github.com/github/gitignore
+docker-compose-prod.yml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
