--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ template_extensions = "html, txt, tex, email"
 show_missing = true
 
 [tool.poetry]
-name = "django_start"
+name = "django-start"
 version = "0.1.0"
 description = "Basic Django project template"
 authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
@@ -65,7 +65,7 @@ django-countries = "^7.3.2"
 whitenoise = "^6.0.0"
 gunicorn = "~=20.1.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pre-commit = "^2.19.0"
 black = "^22.3.0"
 flake8 = "^5.0.0"
@@ -89,15 +89,14 @@ flake8-bugbear = "^22.6.22"
 flake8-import-order = "^0.18.1"
 safety = "^2.1.0"
 pip-check = "^2.7"
-pip-audit = "^2.4.3"
 Sphinx = "^5.1.1"
+pip-audit = "^2.4.5"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
 python_files = ["tests.py", "test_*.py", "*_tests.py"]
 filterwarnings = [
     "ignore::django.utils.deprecation.RemovedInDjango50Warning",
-    "ignore::django.utils.deprecation.RemovedInDjango41Warning",
 ]
 
 [build-system]
