--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ gunicorn = "~=20.1.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.19.0"
 black = "^22.3.0"
-flake8 = "5.0.4"
+flake8 = "^6.0.0"
 django-debug-toolbar = "^3.4.0"
 pytest = "^7.1.2"
 pytest-django = "^4.5.2"
