Add deprecation flag to test session. Fixes #135

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ pip-audit = "^2.4.5"
 DJANGO_SETTINGS_MODULE = "config.settings"
 python_files = ["tests.py", "test_*.py", "*_tests.py"]
 filterwarnings = [
-    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
+    # "ignore::django.utils.deprecation.RemovedInDjango50Warning",
 ]
 
 [build-system]
