--- a/.coveragerc
+++ b/.coveragerc
@@ -1,15 +1,13 @@
 [run]
 include = accounts/*, config/*, pages/*
 omit =
-    */__init__.py,
-    *admin.py,
+    *conftest.py,
     *manage.py,
     *settings*.py,
-    *migrations/*,
-    *tests/*,
-    *test_*.py,
-    *tests.py,
+    *test.py,
     *wsgi.py,
-    *conftest.py,
-    */extra*
+    */__init__.py,
+    */migrations/*,
+    */factories.py,
+    */tests/*,
 plugins = django_coverage_plugin
