--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "4.1.4"
+Django = "4.1.5"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.5"
 django-crispy-forms = "^1.14.0"
@@ -89,7 +89,7 @@ flake8-bugbear = "^22.6.22"
 flake8-import-order = "^0.18.1"
 safety = "^2.3.5"
 pip-check = "^2.7"
-Sphinx = "^6.0.0"
+Sphinx = "6.0.0"
 pip-audit = "^2.4.5"
 
 [tool.pytest.ini_options]
