--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ flake8-bugbear = "^22.6.22"
 flake8-import-order = "^0.18.1"
 safety = "^2.3.5"
 pip-check = "^2.7"
-Sphinx = "6.0.0"
+Sphinx = "^6.1.0"
 pip-audit = "^2.4.5"
 
 [tool.pytest.ini_options]
