--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ max-line-length = 79
 per-file-ignores =
     config/settings.py: E501
     accounts/tests.py:S101,S106
+    accounts/tests/factories.py:BLK100
     accounts/tests/*:S101,S106
     config/tests.py:S101,S106
     config/tests/*:S101,S106
