Upgrade to safety 2.4.0b1. Resolves #153

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,7 @@ flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^23.0.0"
 flake8-import-order = "^0.18.1"
-safety = "2.3.4"
+safety = "2.4.0b1"
 pip-check = "^2.7"
 Sphinx = "^6.1.0"
 pip-audit = "^2.4.0"
