Re-write factory password gen using PostGenerationMethodCall. Resolves #94

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ friendly = "^0.7.0"
 colorama = "^0.4.4"
 django-coverage-plugin = "^3.0.0"
 django-pytest = "^0.2.0"
-factory-boy = "3.0.1"
+factory-boy = "^3.2.0"
 nox = "^2022.1.7"
 flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
