--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,11 @@ template_extensions = "html, txt, tex, email"
 [tool.coverage.report]
 show_missing = true
 
+[tool.djlint]
+files=["templates/"]
+indent=2
+preserve_blank_lines=true
+
 [tool.poetry]
 name = "django-start"
 version = "0.2.0"
