Add support for running dev server with HTTPS. Resolves #235

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,6 +121,8 @@ django-pytest = "^0.2.0"
 ruff = "^0.0.275"
 sphinx-rtd-theme = "^1.2.0"
 djlint = "^1.31.0"
+werkzeug = "^2.3.6"
+pyopenssl = "^23.2.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
