Fix pages tests. 100% coverage

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,9 @@ repos:
     rev: v1.31.1
     hooks:
     - id: djlint-reformat-django
+      exclude: "htmlcov"
     - id: djlint-django
+      exclude: "htmlcov"
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.5.0
