Fix minor grammar & formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,7 @@ template_extensions = "html, txt, tex, email"
 show_missing = true
 
 [tool.djlint]
-exclude=["htmlcov/"]
+exclude="htmlcov"
 files=["templates/"]
 indent=2
 preserve_blank_lines=true
