--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ whitenoise = "^6.1.0"
 psycopg2-binary = "^2.9.5"
 Pillow = "^10.0"
 django-countries = "^7.3.2"
-gunicorn = "~=20.1.0"
+gunicorn = "^21.0"
 crispy-bootstrap4 = "^2022.1"
 django-types = "^0.17.0"
 
@@ -65,16 +65,16 @@ django-coverage-plugin = "^3.0.0"
 nox = "2023.4.22"
 safety = "2.4.0b1"
 factory-boy = "^3.2.0"
-Sphinx = "6.2.1"
+Sphinx = "^7.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
 pytest-cov = "^4.0.0"
 pytest-django = "^4.5.2"
 django-pytest = "^0.2.0"
 ruff = ">= 0.0.275, < 0.0.299"
-sphinx-rtd-theme = "^1.2.0"
 djlint = "^1.31.0"
 werkzeug = "^2.3.6"
 pyopenssl = "^23.2.0"
+furo = "^2023.5.20"
 
 [tool.black]
 line-length = 88
