Update coverage configuration. Resolves #265

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,18 +93,18 @@ exclude = '''
 )/
 '''
 
-[tool.coverage.paths]
-source = ["accounts", "config", "pages"]
-
 [tool.coverage.run]
 branch = true
-source = ["config"]
+dynamic_context = "test_function"
+source = ["accounts", "config", "pages"]
 omit = [
-    "*conftest.py",
-    "*manage.py",
-    "*settings*.py",
+    "conftest.py",
+    "manage.py",
+    "settings.py",
     "*test.py",
-    "*wsgi.py",
+    "asgi.py",
+    "gunicorn.py",
+    "wsgi.py",
     "*/__init__.py",
     "*/migrations/*",
     "*/factories.py",
